fix(style): remove useless grid prefix on gap properties

--- a/packages/ods-react/src/style/_button.scss
+++ b/packages/ods-react/src/style/_button.scss
@@ -30,7 +30,7 @@ $ods-button-size-md: 40px;
 
 @mixin ods-button-size($size) {
   @if $size == 'xs' {
-    grid-column-gap: 6px;
+    column-gap: 6px;
     border-radius: $ods-button-border-radius-xs;
     padding: 5px;
     min-width: $ods-button-size-xs;
@@ -38,13 +38,13 @@ $ods-button-size-md: 40px;
     line-height: 1;
     font-size: 0.75rem;
   } @else if $size == 'sm' {
-    grid-column-gap: 6px;
+    column-gap: 6px;
     padding: 5px;
     min-width: $ods-button-size-sm;
     min-height: $ods-button-size-sm;
     line-height: 1.15;
   } @else if $size == 'md' {
-    grid-column-gap: 8px;
+    column-gap: 8px;
     padding: 7px;
     min-width: $ods-button-size-md;
     min-height: $ods-button-size-md;
